tests/paczka1/fuzzy1/93106083.err
Error in line 3: Eu52xD A83 76,7
Error in line 8: CUuLToc A83 54,8
